--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
@@ -89,7 +89,7 @@
 		"~/Administration/Content/vendors/select2/js/select2.js",
 		volatileJsRoot + "smartstore.selectwrapper.js",
 		"~/Scripts/smartstore.throbber.js",
-		"~/Scripts/smartstore.navbar.js",
+		//"~/Scripts/smartstore.navbar.js",
 		"~/Scripts/smartstore.thumbzoomer.js",
 		"~/Scripts/smartstore.column-equalizer.js",
 		"~/Scripts/smartstore.shrinkmenu.js",
@@ -112,6 +112,8 @@
         window.Res = {
         	"Common.Notification": "@T("Common.Notification").ToString().EncodeJsString()",
         	"Common.Close": "@T("Common.Close").ToString()",
+        	"Common.On": "@T("Common.On").ToString()",
+        	"Common.Off": "@T("Common.Off").ToString()"
         }
     </script>
     
