--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -59,7 +59,7 @@
     }
 
     @{ Html.RenderWidget("admin_content_before"); }
-    <div id="content" style="margin-top: 0">
+    <div id="content">
         <div class="cph">
             @RenderBody()
         </div>
