--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
@@ -16,6 +16,7 @@
 	// add css assets
 	var telerikCssRootPath = "~/Content/2012.2.607/";
 	Html.AppendCssFileParts(
+		"~/Themes/Flex/Content/css/fontastic.css",
 		"~/Content/font-awesome.css",
 		telerikCssRootPath + "telerik.common.css",
 		"~/Content/jquery.pnotify.default.css",
