--- a/src/Presentation/SmartStore.Web/Administration/Views/Widget/Providers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Widget/Providers.cshtml
@@ -16,7 +16,7 @@
 		<td>
 			@Html.ProviderList(Model,
 			@<div>
-				<a class='btn@(item.IsActive ? "" : " btn-success")' href='@Url.Action("ActivateProvider", new { systemName = item.SystemName, activate = !item.IsActive })'>
+				<a class='btn btn-@(item.IsActive ? "secondary" : "success")' href='@Url.Action("ActivateProvider", new { systemName = item.SystemName, activate = !item.IsActive })'>
 					@T("Admin.Common.{0}".FormatInvariant(item.IsActive ? "Deactivate" : "Activate"))
 				</a>
 			</div>)
